# sampleAWSCode

./: dockerfile  pyproject.toml  readme.md
.github/workflows/: ci.yml
api/: project.py
tests/: test_query.py
